// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prefixAttributesCreator Returns prefixed object with custom values 1`] = `
Object {
  "bt_p.b-g": Object {
    "default": 30,
    "longLabel": "button-padding-bottom-general",
    "type": "string",
  },
  "bt_p.b-l": Object {
    "longLabel": "button-padding-bottom-l",
    "type": "string",
  },
  "bt_p.b-m": Object {
    "longLabel": "button-padding-bottom-m",
    "type": "string",
  },
  "bt_p.b-s": Object {
    "longLabel": "button-padding-bottom-s",
    "type": "string",
  },
  "bt_p.b-xl": Object {
    "longLabel": "button-padding-bottom-xl",
    "type": "string",
  },
  "bt_p.b-xs": Object {
    "longLabel": "button-padding-bottom-xs",
    "type": "string",
  },
  "bt_p.b-xxl": Object {
    "longLabel": "button-padding-bottom-xxl",
    "type": "string",
  },
  "bt_p.b.u-g": Object {
    "default": "px",
    "longLabel": "button-padding-bottom-unit-general",
    "type": "string",
  },
  "bt_p.b.u-l": Object {
    "longLabel": "button-padding-bottom-unit-l",
    "type": "string",
  },
  "bt_p.b.u-m": Object {
    "longLabel": "button-padding-bottom-unit-m",
    "type": "string",
  },
  "bt_p.b.u-s": Object {
    "longLabel": "button-padding-bottom-unit-s",
    "type": "string",
  },
  "bt_p.b.u-xl": Object {
    "longLabel": "button-padding-bottom-unit-xl",
    "type": "string",
  },
  "bt_p.b.u-xs": Object {
    "longLabel": "button-padding-bottom-unit-xs",
    "type": "string",
  },
  "bt_p.b.u-xxl": Object {
    "longLabel": "button-padding-bottom-unit-xxl",
    "type": "string",
  },
  "bt_p.l-g": Object {
    "longLabel": "button-padding-left-general",
    "type": "string",
  },
  "bt_p.l-l": Object {
    "longLabel": "button-padding-left-l",
    "type": "string",
  },
  "bt_p.l-m": Object {
    "longLabel": "button-padding-left-m",
    "type": "string",
  },
  "bt_p.l-s": Object {
    "longLabel": "button-padding-left-s",
    "type": "string",
  },
  "bt_p.l-xl": Object {
    "longLabel": "button-padding-left-xl",
    "type": "string",
  },
  "bt_p.l-xs": Object {
    "longLabel": "button-padding-left-xs",
    "type": "string",
  },
  "bt_p.l-xxl": Object {
    "longLabel": "button-padding-left-xxl",
    "type": "string",
  },
  "bt_p.l.u-g": Object {
    "default": "px",
    "longLabel": "button-padding-left-unit-general",
    "type": "string",
  },
  "bt_p.l.u-l": Object {
    "longLabel": "button-padding-left-unit-l",
    "type": "string",
  },
  "bt_p.l.u-m": Object {
    "longLabel": "button-padding-left-unit-m",
    "type": "string",
  },
  "bt_p.l.u-s": Object {
    "longLabel": "button-padding-left-unit-s",
    "type": "string",
  },
  "bt_p.l.u-xl": Object {
    "longLabel": "button-padding-left-unit-xl",
    "type": "string",
  },
  "bt_p.l.u-xs": Object {
    "longLabel": "button-padding-left-unit-xs",
    "type": "string",
  },
  "bt_p.l.u-xxl": Object {
    "longLabel": "button-padding-left-unit-xxl",
    "type": "string",
  },
  "bt_p.r-g": Object {
    "longLabel": "button-padding-right-general",
    "type": "string",
  },
  "bt_p.r-l": Object {
    "longLabel": "button-padding-right-l",
    "type": "string",
  },
  "bt_p.r-m": Object {
    "longLabel": "button-padding-right-m",
    "type": "string",
  },
  "bt_p.r-s": Object {
    "longLabel": "button-padding-right-s",
    "type": "string",
  },
  "bt_p.r-xl": Object {
    "longLabel": "button-padding-right-xl",
    "type": "string",
  },
  "bt_p.r-xs": Object {
    "longLabel": "button-padding-right-xs",
    "type": "string",
  },
  "bt_p.r-xxl": Object {
    "longLabel": "button-padding-right-xxl",
    "type": "string",
  },
  "bt_p.r.u-g": Object {
    "default": "px",
    "longLabel": "button-padding-right-unit-general",
    "type": "string",
  },
  "bt_p.r.u-l": Object {
    "longLabel": "button-padding-right-unit-l",
    "type": "string",
  },
  "bt_p.r.u-m": Object {
    "longLabel": "button-padding-right-unit-m",
    "type": "string",
  },
  "bt_p.r.u-s": Object {
    "longLabel": "button-padding-right-unit-s",
    "type": "string",
  },
  "bt_p.r.u-xl": Object {
    "longLabel": "button-padding-right-unit-xl",
    "type": "string",
  },
  "bt_p.r.u-xs": Object {
    "longLabel": "button-padding-right-unit-xs",
    "type": "string",
  },
  "bt_p.r.u-xxl": Object {
    "longLabel": "button-padding-right-unit-xxl",
    "type": "string",
  },
  "bt_p.sy-g": Object {
    "default": "all",
    "longLabel": "button-padding-sync-general",
    "type": "string",
  },
  "bt_p.sy-l": Object {
    "longLabel": "button-padding-sync-l",
    "type": "string",
  },
  "bt_p.sy-m": Object {
    "longLabel": "button-padding-sync-m",
    "type": "string",
  },
  "bt_p.sy-s": Object {
    "longLabel": "button-padding-sync-s",
    "type": "string",
  },
  "bt_p.sy-xl": Object {
    "longLabel": "button-padding-sync-xl",
    "type": "string",
  },
  "bt_p.sy-xs": Object {
    "longLabel": "button-padding-sync-xs",
    "type": "string",
  },
  "bt_p.sy-xxl": Object {
    "longLabel": "button-padding-sync-xxl",
    "type": "string",
  },
  "bt_p.t-g": Object {
    "longLabel": "button-padding-top-general",
    "type": "string",
  },
  "bt_p.t-l": Object {
    "longLabel": "button-padding-top-l",
    "type": "string",
  },
  "bt_p.t-m": Object {
    "longLabel": "button-padding-top-m",
    "type": "string",
  },
  "bt_p.t-s": Object {
    "longLabel": "button-padding-top-s",
    "type": "string",
  },
  "bt_p.t-xl": Object {
    "longLabel": "button-padding-top-xl",
    "type": "string",
  },
  "bt_p.t-xs": Object {
    "longLabel": "button-padding-top-xs",
    "type": "string",
  },
  "bt_p.t-xxl": Object {
    "longLabel": "button-padding-top-xxl",
    "type": "string",
  },
  "bt_p.t.u-g": Object {
    "default": "px",
    "longLabel": "button-padding-top-unit-general",
    "type": "string",
  },
  "bt_p.t.u-l": Object {
    "longLabel": "button-padding-top-unit-l",
    "type": "string",
  },
  "bt_p.t.u-m": Object {
    "longLabel": "button-padding-top-unit-m",
    "type": "string",
  },
  "bt_p.t.u-s": Object {
    "longLabel": "button-padding-top-unit-s",
    "type": "string",
  },
  "bt_p.t.u-xl": Object {
    "longLabel": "button-padding-top-unit-xl",
    "type": "string",
  },
  "bt_p.t.u-xs": Object {
    "longLabel": "button-padding-top-unit-xs",
    "type": "string",
  },
  "bt_p.t.u-xxl": Object {
    "longLabel": "button-padding-top-unit-xxl",
    "type": "string",
  },
}
`;

exports[`prefixAttributesCreator Returns prefixed object with default values 1`] = `
Object {
  "bt-bo_w.b-g": Object {
    "default": 2,
    "longLabel": "button-border-width-bottom-general",
    "type": "number",
  },
  "bt-bo_w.b-l": Object {
    "longLabel": "button-border-width-bottom-l",
    "type": "number",
  },
  "bt-bo_w.b-m": Object {
    "longLabel": "button-border-width-bottom-m",
    "type": "number",
  },
  "bt-bo_w.b-s": Object {
    "longLabel": "button-border-width-bottom-s",
    "type": "number",
  },
  "bt-bo_w.b-xl": Object {
    "longLabel": "button-border-width-bottom-xl",
    "type": "number",
  },
  "bt-bo_w.b-xs": Object {
    "longLabel": "button-border-width-bottom-xs",
    "type": "number",
  },
  "bt-bo_w.b-xxl": Object {
    "longLabel": "button-border-width-bottom-xxl",
    "type": "number",
  },
  "bt-bo_w.l-g": Object {
    "default": 2,
    "longLabel": "button-border-width-left-general",
    "type": "number",
  },
  "bt-bo_w.l-l": Object {
    "longLabel": "button-border-width-left-l",
    "type": "number",
  },
  "bt-bo_w.l-m": Object {
    "longLabel": "button-border-width-left-m",
    "type": "number",
  },
  "bt-bo_w.l-s": Object {
    "longLabel": "button-border-width-left-s",
    "type": "number",
  },
  "bt-bo_w.l-xl": Object {
    "longLabel": "button-border-width-left-xl",
    "type": "number",
  },
  "bt-bo_w.l-xs": Object {
    "longLabel": "button-border-width-left-xs",
    "type": "number",
  },
  "bt-bo_w.l-xxl": Object {
    "longLabel": "button-border-width-left-xxl",
    "type": "number",
  },
  "bt-bo_w.r-g": Object {
    "default": 2,
    "longLabel": "button-border-width-right-general",
    "type": "number",
  },
  "bt-bo_w.r-l": Object {
    "longLabel": "button-border-width-right-l",
    "type": "number",
  },
  "bt-bo_w.r-m": Object {
    "longLabel": "button-border-width-right-m",
    "type": "number",
  },
  "bt-bo_w.r-s": Object {
    "longLabel": "button-border-width-right-s",
    "type": "number",
  },
  "bt-bo_w.r-xl": Object {
    "longLabel": "button-border-width-right-xl",
    "type": "number",
  },
  "bt-bo_w.r-xs": Object {
    "longLabel": "button-border-width-right-xs",
    "type": "number",
  },
  "bt-bo_w.r-xxl": Object {
    "longLabel": "button-border-width-right-xxl",
    "type": "number",
  },
  "bt-bo_w.sy-g": Object {
    "default": "all",
    "longLabel": "button-border-width-sync-general",
    "type": "string",
  },
  "bt-bo_w.sy-l": Object {
    "longLabel": "button-border-width-sync-l",
    "type": "string",
  },
  "bt-bo_w.sy-m": Object {
    "longLabel": "button-border-width-sync-m",
    "type": "string",
  },
  "bt-bo_w.sy-s": Object {
    "longLabel": "button-border-width-sync-s",
    "type": "string",
  },
  "bt-bo_w.sy-xl": Object {
    "longLabel": "button-border-width-sync-xl",
    "type": "string",
  },
  "bt-bo_w.sy-xs": Object {
    "longLabel": "button-border-width-sync-xs",
    "type": "string",
  },
  "bt-bo_w.sy-xxl": Object {
    "longLabel": "button-border-width-sync-xxl",
    "type": "string",
  },
  "bt-bo_w.t-g": Object {
    "default": 2,
    "longLabel": "button-border-width-top-general",
    "type": "number",
  },
  "bt-bo_w.t-l": Object {
    "longLabel": "button-border-width-top-l",
    "type": "number",
  },
  "bt-bo_w.t-m": Object {
    "longLabel": "button-border-width-top-m",
    "type": "number",
  },
  "bt-bo_w.t-s": Object {
    "longLabel": "button-border-width-top-s",
    "type": "number",
  },
  "bt-bo_w.t-xl": Object {
    "longLabel": "button-border-width-top-xl",
    "type": "number",
  },
  "bt-bo_w.t-xs": Object {
    "longLabel": "button-border-width-top-xs",
    "type": "number",
  },
  "bt-bo_w.t-xxl": Object {
    "longLabel": "button-border-width-top-xxl",
    "type": "number",
  },
  "bt-bo_w.u-g": Object {
    "default": "px",
    "longLabel": "button-border-width-unit-general",
    "type": "string",
  },
  "bt-bo_w.u-l": Object {
    "longLabel": "button-border-width-unit-l",
    "type": "string",
  },
  "bt-bo_w.u-m": Object {
    "longLabel": "button-border-width-unit-m",
    "type": "string",
  },
  "bt-bo_w.u-s": Object {
    "longLabel": "button-border-width-unit-s",
    "type": "string",
  },
  "bt-bo_w.u-xl": Object {
    "longLabel": "button-border-width-unit-xl",
    "type": "string",
  },
  "bt-bo_w.u-xs": Object {
    "longLabel": "button-border-width-unit-xs",
    "type": "string",
  },
  "bt-bo_w.u-xxl": Object {
    "longLabel": "button-border-width-unit-xxl",
    "type": "string",
  },
  "bt-bs.sh": Object {
    "default": false,
    "longLabel": "button-box-shadow-status-hover",
    "type": "boolean",
  },
  "bt-bs_blu-g.h": Object {
    "longLabel": "button-box-shadow-blur-general-hover",
    "type": "number",
  },
  "bt-bs_blu-l.h": Object {
    "longLabel": "button-box-shadow-blur-l-hover",
    "type": "number",
  },
  "bt-bs_blu-m.h": Object {
    "longLabel": "button-box-shadow-blur-m-hover",
    "type": "number",
  },
  "bt-bs_blu-s.h": Object {
    "longLabel": "button-box-shadow-blur-s-hover",
    "type": "number",
  },
  "bt-bs_blu-xl.h": Object {
    "longLabel": "button-box-shadow-blur-xl-hover",
    "type": "number",
  },
  "bt-bs_blu-xs.h": Object {
    "longLabel": "button-box-shadow-blur-xs-hover",
    "type": "number",
  },
  "bt-bs_blu-xxl.h": Object {
    "longLabel": "button-box-shadow-blur-xxl-hover",
    "type": "number",
  },
  "bt-bs_blu.u-g.h": Object {
    "longLabel": "button-box-shadow-blur-unit-general-hover",
    "type": "string",
  },
  "bt-bs_blu.u-l.h": Object {
    "longLabel": "button-box-shadow-blur-unit-l-hover",
    "type": "string",
  },
  "bt-bs_blu.u-m.h": Object {
    "longLabel": "button-box-shadow-blur-unit-m-hover",
    "type": "string",
  },
  "bt-bs_blu.u-s.h": Object {
    "longLabel": "button-box-shadow-blur-unit-s-hover",
    "type": "string",
  },
  "bt-bs_blu.u-xl.h": Object {
    "longLabel": "button-box-shadow-blur-unit-xl-hover",
    "type": "string",
  },
  "bt-bs_blu.u-xs.h": Object {
    "longLabel": "button-box-shadow-blur-unit-xs-hover",
    "type": "string",
  },
  "bt-bs_blu.u-xxl.h": Object {
    "longLabel": "button-box-shadow-blur-unit-xxl-hover",
    "type": "string",
  },
  "bt-bs_cc-g.h": Object {
    "longLabel": "button-box-shadow-custom-color-general-hover",
    "type": "string",
  },
  "bt-bs_cc-l.h": Object {
    "longLabel": "button-box-shadow-custom-color-l-hover",
    "type": "string",
  },
  "bt-bs_cc-m.h": Object {
    "longLabel": "button-box-shadow-custom-color-m-hover",
    "type": "string",
  },
  "bt-bs_cc-s.h": Object {
    "longLabel": "button-box-shadow-custom-color-s-hover",
    "type": "string",
  },
  "bt-bs_cc-xl.h": Object {
    "longLabel": "button-box-shadow-custom-color-xl-hover",
    "type": "string",
  },
  "bt-bs_cc-xs.h": Object {
    "longLabel": "button-box-shadow-custom-color-xs-hover",
    "type": "string",
  },
  "bt-bs_cc-xxl.h": Object {
    "longLabel": "button-box-shadow-custom-color-xxl-hover",
    "type": "string",
  },
  "bt-bs_ho-g.h": Object {
    "longLabel": "button-box-shadow-horizontal-general-hover",
    "type": "number",
  },
  "bt-bs_ho-l.h": Object {
    "longLabel": "button-box-shadow-horizontal-l-hover",
    "type": "number",
  },
  "bt-bs_ho-m.h": Object {
    "longLabel": "button-box-shadow-horizontal-m-hover",
    "type": "number",
  },
  "bt-bs_ho-s.h": Object {
    "longLabel": "button-box-shadow-horizontal-s-hover",
    "type": "number",
  },
  "bt-bs_ho-xl.h": Object {
    "longLabel": "button-box-shadow-horizontal-xl-hover",
    "type": "number",
  },
  "bt-bs_ho-xs.h": Object {
    "longLabel": "button-box-shadow-horizontal-xs-hover",
    "type": "number",
  },
  "bt-bs_ho-xxl.h": Object {
    "longLabel": "button-box-shadow-horizontal-xxl-hover",
    "type": "number",
  },
  "bt-bs_ho.u-g.h": Object {
    "longLabel": "button-box-shadow-horizontal-unit-general-hover",
    "type": "string",
  },
  "bt-bs_ho.u-l.h": Object {
    "longLabel": "button-box-shadow-horizontal-unit-l-hover",
    "type": "string",
  },
  "bt-bs_ho.u-m.h": Object {
    "longLabel": "button-box-shadow-horizontal-unit-m-hover",
    "type": "string",
  },
  "bt-bs_ho.u-s.h": Object {
    "longLabel": "button-box-shadow-horizontal-unit-s-hover",
    "type": "string",
  },
  "bt-bs_ho.u-xl.h": Object {
    "longLabel": "button-box-shadow-horizontal-unit-xl-hover",
    "type": "string",
  },
  "bt-bs_ho.u-xs.h": Object {
    "longLabel": "button-box-shadow-horizontal-unit-xs-hover",
    "type": "string",
  },
  "bt-bs_ho.u-xxl.h": Object {
    "longLabel": "button-box-shadow-horizontal-unit-xxl-hover",
    "type": "string",
  },
  "bt-bs_in-g.h": Object {
    "longLabel": "button-box-shadow-inset-general-hover",
    "type": "boolean",
  },
  "bt-bs_in-l.h": Object {
    "longLabel": "button-box-shadow-inset-l-hover",
    "type": "boolean",
  },
  "bt-bs_in-m.h": Object {
    "longLabel": "button-box-shadow-inset-m-hover",
    "type": "boolean",
  },
  "bt-bs_in-s.h": Object {
    "longLabel": "button-box-shadow-inset-s-hover",
    "type": "boolean",
  },
  "bt-bs_in-xl.h": Object {
    "longLabel": "button-box-shadow-inset-xl-hover",
    "type": "boolean",
  },
  "bt-bs_in-xs.h": Object {
    "longLabel": "button-box-shadow-inset-xs-hover",
    "type": "boolean",
  },
  "bt-bs_in-xxl.h": Object {
    "longLabel": "button-box-shadow-inset-xxl-hover",
    "type": "boolean",
  },
  "bt-bs_pc-g.h": Object {
    "default": 6,
    "longLabel": "button-box-shadow-palette-color-general-hover",
    "type": "number",
  },
  "bt-bs_pc-l.h": Object {
    "longLabel": "button-box-shadow-palette-color-l-hover",
    "type": "number",
  },
  "bt-bs_pc-m.h": Object {
    "longLabel": "button-box-shadow-palette-color-m-hover",
    "type": "number",
  },
  "bt-bs_pc-s.h": Object {
    "longLabel": "button-box-shadow-palette-color-s-hover",
    "type": "number",
  },
  "bt-bs_pc-xl.h": Object {
    "longLabel": "button-box-shadow-palette-color-xl-hover",
    "type": "number",
  },
  "bt-bs_pc-xs.h": Object {
    "longLabel": "button-box-shadow-palette-color-xs-hover",
    "type": "number",
  },
  "bt-bs_pc-xxl.h": Object {
    "longLabel": "button-box-shadow-palette-color-xxl-hover",
    "type": "number",
  },
  "bt-bs_po-g.h": Object {
    "longLabel": "button-box-shadow-palette-opacity-general-hover",
    "type": "number",
  },
  "bt-bs_po-l.h": Object {
    "longLabel": "button-box-shadow-palette-opacity-l-hover",
    "type": "number",
  },
  "bt-bs_po-m.h": Object {
    "longLabel": "button-box-shadow-palette-opacity-m-hover",
    "type": "number",
  },
  "bt-bs_po-s.h": Object {
    "longLabel": "button-box-shadow-palette-opacity-s-hover",
    "type": "number",
  },
  "bt-bs_po-xl.h": Object {
    "longLabel": "button-box-shadow-palette-opacity-xl-hover",
    "type": "number",
  },
  "bt-bs_po-xs.h": Object {
    "longLabel": "button-box-shadow-palette-opacity-xs-hover",
    "type": "number",
  },
  "bt-bs_po-xxl.h": Object {
    "longLabel": "button-box-shadow-palette-opacity-xxl-hover",
    "type": "number",
  },
  "bt-bs_ps-g.h": Object {
    "longLabel": "button-box-shadow-palette-status-general-hover",
    "type": "boolean",
  },
  "bt-bs_ps-l.h": Object {
    "longLabel": "button-box-shadow-palette-status-l-hover",
    "type": "boolean",
  },
  "bt-bs_ps-m.h": Object {
    "longLabel": "button-box-shadow-palette-status-m-hover",
    "type": "boolean",
  },
  "bt-bs_ps-s.h": Object {
    "longLabel": "button-box-shadow-palette-status-s-hover",
    "type": "boolean",
  },
  "bt-bs_ps-xl.h": Object {
    "longLabel": "button-box-shadow-palette-status-xl-hover",
    "type": "boolean",
  },
  "bt-bs_ps-xs.h": Object {
    "longLabel": "button-box-shadow-palette-status-xs-hover",
    "type": "boolean",
  },
  "bt-bs_ps-xxl.h": Object {
    "longLabel": "button-box-shadow-palette-status-xxl-hover",
    "type": "boolean",
  },
  "bt-bs_sp-g.h": Object {
    "longLabel": "button-box-shadow-spread-general-hover",
    "type": "number",
  },
  "bt-bs_sp-l.h": Object {
    "longLabel": "button-box-shadow-spread-l-hover",
    "type": "number",
  },
  "bt-bs_sp-m.h": Object {
    "longLabel": "button-box-shadow-spread-m-hover",
    "type": "number",
  },
  "bt-bs_sp-s.h": Object {
    "longLabel": "button-box-shadow-spread-s-hover",
    "type": "number",
  },
  "bt-bs_sp-xl.h": Object {
    "longLabel": "button-box-shadow-spread-xl-hover",
    "type": "number",
  },
  "bt-bs_sp-xs.h": Object {
    "longLabel": "button-box-shadow-spread-xs-hover",
    "type": "number",
  },
  "bt-bs_sp-xxl.h": Object {
    "longLabel": "button-box-shadow-spread-xxl-hover",
    "type": "number",
  },
  "bt-bs_sp.u-g.h": Object {
    "longLabel": "button-box-shadow-spread-unit-general-hover",
    "type": "string",
  },
  "bt-bs_sp.u-l.h": Object {
    "longLabel": "button-box-shadow-spread-unit-l-hover",
    "type": "string",
  },
  "bt-bs_sp.u-m.h": Object {
    "longLabel": "button-box-shadow-spread-unit-m-hover",
    "type": "string",
  },
  "bt-bs_sp.u-s.h": Object {
    "longLabel": "button-box-shadow-spread-unit-s-hover",
    "type": "string",
  },
  "bt-bs_sp.u-xl.h": Object {
    "longLabel": "button-box-shadow-spread-unit-xl-hover",
    "type": "string",
  },
  "bt-bs_sp.u-xs.h": Object {
    "longLabel": "button-box-shadow-spread-unit-xs-hover",
    "type": "string",
  },
  "bt-bs_sp.u-xxl.h": Object {
    "longLabel": "button-box-shadow-spread-unit-xxl-hover",
    "type": "string",
  },
  "bt-bs_v-g.h": Object {
    "longLabel": "button-box-shadow-vertical-general-hover",
    "type": "number",
  },
  "bt-bs_v-l.h": Object {
    "longLabel": "button-box-shadow-vertical-l-hover",
    "type": "number",
  },
  "bt-bs_v-m.h": Object {
    "longLabel": "button-box-shadow-vertical-m-hover",
    "type": "number",
  },
  "bt-bs_v-s.h": Object {
    "longLabel": "button-box-shadow-vertical-s-hover",
    "type": "number",
  },
  "bt-bs_v-xl.h": Object {
    "longLabel": "button-box-shadow-vertical-xl-hover",
    "type": "number",
  },
  "bt-bs_v-xs.h": Object {
    "longLabel": "button-box-shadow-vertical-xs-hover",
    "type": "number",
  },
  "bt-bs_v-xxl.h": Object {
    "longLabel": "button-box-shadow-vertical-xxl-hover",
    "type": "number",
  },
  "bt-bs_v.u-g.h": Object {
    "longLabel": "button-box-shadow-vertical-unit-general-hover",
    "type": "string",
  },
  "bt-bs_v.u-l.h": Object {
    "longLabel": "button-box-shadow-vertical-unit-l-hover",
    "type": "string",
  },
  "bt-bs_v.u-m.h": Object {
    "longLabel": "button-box-shadow-vertical-unit-m-hover",
    "type": "string",
  },
  "bt-bs_v.u-s.h": Object {
    "longLabel": "button-box-shadow-vertical-unit-s-hover",
    "type": "string",
  },
  "bt-bs_v.u-xl.h": Object {
    "longLabel": "button-box-shadow-vertical-unit-xl-hover",
    "type": "string",
  },
  "bt-bs_v.u-xs.h": Object {
    "longLabel": "button-box-shadow-vertical-unit-xs-hover",
    "type": "string",
  },
  "bt-bs_v.u-xxl.h": Object {
    "longLabel": "button-box-shadow-vertical-unit-xxl-hover",
    "type": "string",
  },
  "bt_m.b-g": Object {
    "longLabel": "button-margin-bottom-general",
    "type": "string",
  },
  "bt_m.b-l": Object {
    "longLabel": "button-margin-bottom-l",
    "type": "string",
  },
  "bt_m.b-m": Object {
    "longLabel": "button-margin-bottom-m",
    "type": "string",
  },
  "bt_m.b-s": Object {
    "longLabel": "button-margin-bottom-s",
    "type": "string",
  },
  "bt_m.b-xl": Object {
    "longLabel": "button-margin-bottom-xl",
    "type": "string",
  },
  "bt_m.b-xs": Object {
    "longLabel": "button-margin-bottom-xs",
    "type": "string",
  },
  "bt_m.b-xxl": Object {
    "longLabel": "button-margin-bottom-xxl",
    "type": "string",
  },
  "bt_m.b.u-g": Object {
    "default": "px",
    "longLabel": "button-margin-bottom-unit-general",
    "type": "string",
  },
  "bt_m.b.u-l": Object {
    "longLabel": "button-margin-bottom-unit-l",
    "type": "string",
  },
  "bt_m.b.u-m": Object {
    "longLabel": "button-margin-bottom-unit-m",
    "type": "string",
  },
  "bt_m.b.u-s": Object {
    "longLabel": "button-margin-bottom-unit-s",
    "type": "string",
  },
  "bt_m.b.u-xl": Object {
    "longLabel": "button-margin-bottom-unit-xl",
    "type": "string",
  },
  "bt_m.b.u-xs": Object {
    "longLabel": "button-margin-bottom-unit-xs",
    "type": "string",
  },
  "bt_m.b.u-xxl": Object {
    "longLabel": "button-margin-bottom-unit-xxl",
    "type": "string",
  },
  "bt_m.l-g": Object {
    "longLabel": "button-margin-left-general",
    "type": "string",
  },
  "bt_m.l-l": Object {
    "longLabel": "button-margin-left-l",
    "type": "string",
  },
  "bt_m.l-m": Object {
    "longLabel": "button-margin-left-m",
    "type": "string",
  },
  "bt_m.l-s": Object {
    "longLabel": "button-margin-left-s",
    "type": "string",
  },
  "bt_m.l-xl": Object {
    "longLabel": "button-margin-left-xl",
    "type": "string",
  },
  "bt_m.l-xs": Object {
    "longLabel": "button-margin-left-xs",
    "type": "string",
  },
  "bt_m.l-xxl": Object {
    "longLabel": "button-margin-left-xxl",
    "type": "string",
  },
  "bt_m.l.u-g": Object {
    "default": "px",
    "longLabel": "button-margin-left-unit-general",
    "type": "string",
  },
  "bt_m.l.u-l": Object {
    "longLabel": "button-margin-left-unit-l",
    "type": "string",
  },
  "bt_m.l.u-m": Object {
    "longLabel": "button-margin-left-unit-m",
    "type": "string",
  },
  "bt_m.l.u-s": Object {
    "longLabel": "button-margin-left-unit-s",
    "type": "string",
  },
  "bt_m.l.u-xl": Object {
    "longLabel": "button-margin-left-unit-xl",
    "type": "string",
  },
  "bt_m.l.u-xs": Object {
    "longLabel": "button-margin-left-unit-xs",
    "type": "string",
  },
  "bt_m.l.u-xxl": Object {
    "longLabel": "button-margin-left-unit-xxl",
    "type": "string",
  },
  "bt_m.r-g": Object {
    "longLabel": "button-margin-right-general",
    "type": "string",
  },
  "bt_m.r-l": Object {
    "longLabel": "button-margin-right-l",
    "type": "string",
  },
  "bt_m.r-m": Object {
    "longLabel": "button-margin-right-m",
    "type": "string",
  },
  "bt_m.r-s": Object {
    "longLabel": "button-margin-right-s",
    "type": "string",
  },
  "bt_m.r-xl": Object {
    "longLabel": "button-margin-right-xl",
    "type": "string",
  },
  "bt_m.r-xs": Object {
    "longLabel": "button-margin-right-xs",
    "type": "string",
  },
  "bt_m.r-xxl": Object {
    "longLabel": "button-margin-right-xxl",
    "type": "string",
  },
  "bt_m.r.u-g": Object {
    "default": "px",
    "longLabel": "button-margin-right-unit-general",
    "type": "string",
  },
  "bt_m.r.u-l": Object {
    "longLabel": "button-margin-right-unit-l",
    "type": "string",
  },
  "bt_m.r.u-m": Object {
    "longLabel": "button-margin-right-unit-m",
    "type": "string",
  },
  "bt_m.r.u-s": Object {
    "longLabel": "button-margin-right-unit-s",
    "type": "string",
  },
  "bt_m.r.u-xl": Object {
    "longLabel": "button-margin-right-unit-xl",
    "type": "string",
  },
  "bt_m.r.u-xs": Object {
    "longLabel": "button-margin-right-unit-xs",
    "type": "string",
  },
  "bt_m.r.u-xxl": Object {
    "longLabel": "button-margin-right-unit-xxl",
    "type": "string",
  },
  "bt_m.sy-g": Object {
    "default": "all",
    "longLabel": "button-margin-sync-general",
    "type": "string",
  },
  "bt_m.sy-l": Object {
    "longLabel": "button-margin-sync-l",
    "type": "string",
  },
  "bt_m.sy-m": Object {
    "longLabel": "button-margin-sync-m",
    "type": "string",
  },
  "bt_m.sy-s": Object {
    "longLabel": "button-margin-sync-s",
    "type": "string",
  },
  "bt_m.sy-xl": Object {
    "longLabel": "button-margin-sync-xl",
    "type": "string",
  },
  "bt_m.sy-xs": Object {
    "longLabel": "button-margin-sync-xs",
    "type": "string",
  },
  "bt_m.sy-xxl": Object {
    "longLabel": "button-margin-sync-xxl",
    "type": "string",
  },
  "bt_m.t-g": Object {
    "longLabel": "button-margin-top-general",
    "type": "string",
  },
  "bt_m.t-l": Object {
    "longLabel": "button-margin-top-l",
    "type": "string",
  },
  "bt_m.t-m": Object {
    "longLabel": "button-margin-top-m",
    "type": "string",
  },
  "bt_m.t-s": Object {
    "longLabel": "button-margin-top-s",
    "type": "string",
  },
  "bt_m.t-xl": Object {
    "longLabel": "button-margin-top-xl",
    "type": "string",
  },
  "bt_m.t-xs": Object {
    "longLabel": "button-margin-top-xs",
    "type": "string",
  },
  "bt_m.t-xxl": Object {
    "longLabel": "button-margin-top-xxl",
    "type": "string",
  },
  "bt_m.t.u-g": Object {
    "default": "px",
    "longLabel": "button-margin-top-unit-general",
    "type": "string",
  },
  "bt_m.t.u-l": Object {
    "longLabel": "button-margin-top-unit-l",
    "type": "string",
  },
  "bt_m.t.u-m": Object {
    "longLabel": "button-margin-top-unit-m",
    "type": "string",
  },
  "bt_m.t.u-s": Object {
    "longLabel": "button-margin-top-unit-s",
    "type": "string",
  },
  "bt_m.t.u-xl": Object {
    "longLabel": "button-margin-top-unit-xl",
    "type": "string",
  },
  "bt_m.t.u-xs": Object {
    "longLabel": "button-margin-top-unit-xs",
    "type": "string",
  },
  "bt_m.t.u-xxl": Object {
    "longLabel": "button-margin-top-unit-xxl",
    "type": "string",
  },
}
`;

exports[`prefixAttributesCreator Returns prefixed object with excluded values 1`] = `
Object {
  "bt_p.l-g": Object {
    "longLabel": "button-padding-left-general",
    "type": "string",
  },
  "bt_p.l-l": Object {
    "longLabel": "button-padding-left-l",
    "type": "string",
  },
  "bt_p.l-m": Object {
    "longLabel": "button-padding-left-m",
    "type": "string",
  },
  "bt_p.l-s": Object {
    "longLabel": "button-padding-left-s",
    "type": "string",
  },
  "bt_p.l-xl": Object {
    "longLabel": "button-padding-left-xl",
    "type": "string",
  },
  "bt_p.l-xs": Object {
    "longLabel": "button-padding-left-xs",
    "type": "string",
  },
  "bt_p.l-xxl": Object {
    "longLabel": "button-padding-left-xxl",
    "type": "string",
  },
  "bt_p.l.u-g": Object {
    "default": "px",
    "longLabel": "button-padding-left-unit-general",
    "type": "string",
  },
  "bt_p.l.u-l": Object {
    "longLabel": "button-padding-left-unit-l",
    "type": "string",
  },
  "bt_p.l.u-m": Object {
    "longLabel": "button-padding-left-unit-m",
    "type": "string",
  },
  "bt_p.l.u-s": Object {
    "longLabel": "button-padding-left-unit-s",
    "type": "string",
  },
  "bt_p.l.u-xl": Object {
    "longLabel": "button-padding-left-unit-xl",
    "type": "string",
  },
  "bt_p.l.u-xs": Object {
    "longLabel": "button-padding-left-unit-xs",
    "type": "string",
  },
  "bt_p.l.u-xxl": Object {
    "longLabel": "button-padding-left-unit-xxl",
    "type": "string",
  },
  "bt_p.r-g": Object {
    "longLabel": "button-padding-right-general",
    "type": "string",
  },
  "bt_p.r-l": Object {
    "longLabel": "button-padding-right-l",
    "type": "string",
  },
  "bt_p.r-m": Object {
    "longLabel": "button-padding-right-m",
    "type": "string",
  },
  "bt_p.r-s": Object {
    "longLabel": "button-padding-right-s",
    "type": "string",
  },
  "bt_p.r-xl": Object {
    "longLabel": "button-padding-right-xl",
    "type": "string",
  },
  "bt_p.r-xs": Object {
    "longLabel": "button-padding-right-xs",
    "type": "string",
  },
  "bt_p.r-xxl": Object {
    "longLabel": "button-padding-right-xxl",
    "type": "string",
  },
  "bt_p.r.u-g": Object {
    "default": "px",
    "longLabel": "button-padding-right-unit-general",
    "type": "string",
  },
  "bt_p.r.u-l": Object {
    "longLabel": "button-padding-right-unit-l",
    "type": "string",
  },
  "bt_p.r.u-m": Object {
    "longLabel": "button-padding-right-unit-m",
    "type": "string",
  },
  "bt_p.r.u-s": Object {
    "longLabel": "button-padding-right-unit-s",
    "type": "string",
  },
  "bt_p.r.u-xl": Object {
    "longLabel": "button-padding-right-unit-xl",
    "type": "string",
  },
  "bt_p.r.u-xs": Object {
    "longLabel": "button-padding-right-unit-xs",
    "type": "string",
  },
  "bt_p.r.u-xxl": Object {
    "longLabel": "button-padding-right-unit-xxl",
    "type": "string",
  },
  "bt_p.sy-g": Object {
    "default": "all",
    "longLabel": "button-padding-sync-general",
    "type": "string",
  },
  "bt_p.sy-l": Object {
    "longLabel": "button-padding-sync-l",
    "type": "string",
  },
  "bt_p.sy-m": Object {
    "longLabel": "button-padding-sync-m",
    "type": "string",
  },
  "bt_p.sy-s": Object {
    "longLabel": "button-padding-sync-s",
    "type": "string",
  },
  "bt_p.sy-xl": Object {
    "longLabel": "button-padding-sync-xl",
    "type": "string",
  },
  "bt_p.sy-xs": Object {
    "longLabel": "button-padding-sync-xs",
    "type": "string",
  },
  "bt_p.sy-xxl": Object {
    "longLabel": "button-padding-sync-xxl",
    "type": "string",
  },
  "bt_p.t-g": Object {
    "longLabel": "button-padding-top-general",
    "type": "string",
  },
  "bt_p.t-l": Object {
    "longLabel": "button-padding-top-l",
    "type": "string",
  },
  "bt_p.t-m": Object {
    "longLabel": "button-padding-top-m",
    "type": "string",
  },
  "bt_p.t-s": Object {
    "longLabel": "button-padding-top-s",
    "type": "string",
  },
  "bt_p.t-xl": Object {
    "longLabel": "button-padding-top-xl",
    "type": "string",
  },
  "bt_p.t-xs": Object {
    "longLabel": "button-padding-top-xs",
    "type": "string",
  },
  "bt_p.t-xxl": Object {
    "longLabel": "button-padding-top-xxl",
    "type": "string",
  },
  "bt_p.t.u-g": Object {
    "default": "px",
    "longLabel": "button-padding-top-unit-general",
    "type": "string",
  },
  "bt_p.t.u-l": Object {
    "longLabel": "button-padding-top-unit-l",
    "type": "string",
  },
  "bt_p.t.u-m": Object {
    "longLabel": "button-padding-top-unit-m",
    "type": "string",
  },
  "bt_p.t.u-s": Object {
    "longLabel": "button-padding-top-unit-s",
    "type": "string",
  },
  "bt_p.t.u-xl": Object {
    "longLabel": "button-padding-top-unit-xl",
    "type": "string",
  },
  "bt_p.t.u-xs": Object {
    "longLabel": "button-padding-top-unit-xs",
    "type": "string",
  },
  "bt_p.t.u-xxl": Object {
    "longLabel": "button-padding-top-unit-xxl",
    "type": "string",
  },
}
`;
